# Multiwfn_3.8_dev_bin_Linux

./: HOW TO INSTALL.txt  Multiwfn_quick_start.txt  README.md  benzene_test.mwfn  conda-environment.yml  pyproject.toml  r1_1p500_r2_1p500_ang_180p000.mp2_charges.npz  script.sh  settings.ini  slurm_convert_charges.sbatch  slurm_convert_grids.sbatch  slurm_cp2npz.sbatch  提醒：使用Multiwfn发表文章(包括代算)需要在正文里引用程序原文.txt
blenderp/: cpview.py
examples/: benzene_charges.npz  benzene_grid.npz  benzene_grid_filtered.npz
examples/excit/CH3Cl/: CH3Cl.out
examples/excit/CH3Cl/bkchg/: CH3Cl_Q.out
examples/scripts/: CPprop.npz  CPprop.txt
multiwfn_cli/: __main__.py  _geometry.py  charges.py  cli.py  config.py  convert.py  cp_parser.py  executors.py  grid_filter.py  grids.py
multiwfn_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
